--- a/style.css
+++ b/style.css
@@ -1,15 +1,44 @@
+html { 
+    background: url("space.png") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #1b1b2f75;
+  }
+
+/* body {
+    background-color: #1b1b2f75;
+    margin: 0;
+} */
+
 #title{
     font-family: 'Space Mono', monospace;
+    text-align: center;
+    color: #EFEFEF;
+}
+
+#description {
+    text-align: center;
+    color: #EFEFEF;
+    margin-bottom: 60px;
 }
 
 p, label {
     margin-bottom: 15px;
     font-family: 'Roboto', sans-serif;
+    color: #EFEFEF;
+    font-size: 1.5rem;
 }
 
 #survey-form {
     display: flex;
     flex-direction: column;
+    border: 2px solid #EFEFEF;
+    border-radius: 25px;
+    margin: 0px 1200px;
+    background-color: #162447a9;
+    margin-bottom: 100px;
     
 }
 
@@ -17,11 +46,40 @@ p, label {
     margin: auto;
     padding: 40px;
     text-align: left;
-    width:20%;
+    width:80%;
+
 }
 
 
 
 input {
     margin-top: 20px;
+}
+
+
+input[type=text], input[type=email], input[type=number], select {
+    width: 100%;
+    height: 1.5rem;
+    border-radius: 10px;
+}
+
+select {
+    margin-top: 20px;
+}
+
+textarea{
+    margin-top: 20px;
+    width: 100%;
+    height: 8rem;
+}
+
+#submit {
+    width: 20%;
+    height: 2rem;
+    margin: 0 auto 40px;
+    font-size: 1rem;
+    color: #EFEFEF;
+    background-color: #e43f5a;
+    border: 1px solid #e43f5a;
+    border-radius: 5px;
 }
