--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@ html {
     background-color: #1b1b2f75;
   }
 
-/* body {
-    background-color: #1b1b2f75;
-    margin: 0;
-} */
+
 
 #title{
     font-family: 'Space Mono', monospace;
     text-align: center;
     color: #EFEFEF;
+    font-weight:900;
 }
 
 #description {
@@ -59,18 +57,26 @@ input {
 
 input[type=text], input[type=email], input[type=number], select {
     width: 100%;
-    height: 1.5rem;
+    height: 2rem;
     border-radius: 10px;
+    font-size: 1rem;
+}
+
+input[type=checkbox], input[type=radio]{
+    transform: scale(1.5);
+    width: 2rem;
 }
 
 select {
     margin-top: 20px;
+    height:50px;
 }
 
 textarea{
     margin-top: 20px;
     width: 100%;
     height: 8rem;
+    font-size: 1rem;
 }
 
 #submit {
@@ -82,4 +88,11 @@ textarea{
     background-color: #e43f5a;
     border: 1px solid #e43f5a;
     border-radius: 5px;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=number]:focus, select:focus, textarea:focus {
+    outline: none;
+    border: 2px solid #EFEFEF;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
